# questioning_app

./: .gitignore  CMakeLists.txt  README.md
include/: answer_option.h  new_questions.h  question_option.h  question_utils.h  questioningapp.h  results.h  results_window.h  task_solving.h  utils.h
installers/: .gitignore
installers/example_install_folders/: README.md
installers/example_install_folders/student/config/: config.xml
installers/example_install_folders/teacher/config/: config.xml
installers/sample_install_folder/: README.md
installers/sample_install_folder/config/: config.xml
original/include/: new_questions.h  questioningapp.h  utils.h
original/src/: CMakeLists.txt  main.cpp  new_questions.cpp  questioningapp.cpp  questioningapp_open_task.cpp  read_write_utils.cpp  result_details.cpp  task_solving.cpp
src/: CMakeLists.txt  answer_option.cpp  main.cpp  new_questions.cpp  new_questions_window.cpp  question_option.cpp  question_utils.cpp  questioningapp.cpp  questioningapp_open_results.cpp  questioningapp_open_task.cpp  resources.qrc  result_details.cpp  results_window.cpp  task_solving.cpp  utils.cpp
student/: CMakeLists.txt
student/include/: question_utils.h  questioningapp.h  results.h  task_solving.h  utils.h
student/src/: CMakeLists.txt  answer_option.cpp  questioningapp.cpp  questioningapp_open_results.cpp  questioningapp_open_task.cpp  resources.rc  result_details.cpp  results_window.cpp  task_solving.cpp  utils.cpp
student/src/img/: resources.qrc
teacher/: CMakeLists.txt
teacher/include/: questioningapp.h  results.h  task_solving.h  utils.h
teacher/src/: CMakeLists.txt  new_questions.cpp  questioningapp.cpp  questioningapp_open_results.cpp  questioningapp_open_task.cpp  read_write_utils.cpp  resources.rc  results_window.cpp  task_solving.cpp
